--- a/.dvc/.gitignore
+++ b/.dvc/.gitignore
@@ -1100,3 +1100,33 @@
 /config.local
 /tmp
 /cache
+/config.local
+/config.local
+/tmp
+/cache
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
