--- a/.dvc/.gitignore
+++ b/.dvc/.gitignore
@@ -1130,3 +1130,24 @@
 /config.local
 /tmp
 /cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
+/config.local
+/tmp
+/cache
