--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,10 @@
-HF_TOKEN=
-GITHUB_TOKEN=
-DVC_STUDIO_TOKEN=
 AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_REGION=
 AWS_DEFAULT_REGION=
+AWS_REGION=
+AWS_SECRET_ACCESS_KEY=
+DATASETS_REMOTE=
+DVC_STUDIO_TOKEN=
+GITHUB_TOKEN=
+HF_TOKEN=
+MODELS_REMOTE=
+OPENAI_API_KEY=
