--- a/.github/workflows/codacy.yml
+++ b/.github/workflows/codacy.yml
@@ -31,6 +31,9 @@ jobs:
           format: sarif
           gh-code-scanning-compat: true
           max-allowed-issues: 2147483647
+          engines: |
+            eslint:
+              enabled: false
 
       - name: Upload SARIF results file
         uses: github/codeql-action/upload-sarif@v3
