--- a/.github/workflows/codacy.yml
+++ b/.github/workflows/codacy.yml
@@ -7,6 +7,7 @@ on:
     branches: ["main"]
   schedule:
     - cron: "39 21 * * 0" # Run this job at 9:39 PM every Sunday
+  workflow_dispatch:
 
 permissions:
   contents: read
