--- a/.codacy.yml
+++ b/.codacy.yml
@@ -1,21 +1,83 @@
 engines:
+  ameba:
+    enabled: false
   bandit:
     enabled: true
+  brakeman:
+    enabled: false
+  checkov:
+    enabled: false
+  checkstyle:
+    enabled: false
+  codacy-scalameta-pro:
+    enabled: false
+  codenarc:
+    enabled: false
+  coffeelint:
+    enabled: false
+  cppcheck:
+    enabled: false
+  credo:
+    enabled: false
+  dartanalyzer:
+    enabled: false
+  detekt:
+    enabled: false
   duplication:
     enabled: false
-  eslint:
+    exclude_paths:
+      - "**"
+  eslint-8:
     enabled: false
-  flake8:
-    enabled: true
-  jacksonlint:
+  flawfinder:
     enabled: false
-  mypy:
+  hadolint:
+    enabled: false
+  jacksonlinter:
+    enabled: false
+  markdownlint:
     enabled: true
-  pydocstyle:
+  phpcs:
+    enabled: false
+  phpmd:
+    enabled: false
+  pmd:
+    enabled: false
+  pmdcpd:
+    enabled: false
+  prospector:
     enabled: true
-  pylint:
+  psscriptanalyzer:
+    enabled: false
+  pylintpython3:
     enabled: true
+  remark-lint:
+    enabled: false
+  revive:
+    enabled: false
+  rubocop:
+    enabled: false
   scalastyle:
+    enabled: false
+  semgrep:
+    enabled: true
+  shellcheck:
+    enabled: true
+  sonarcsharp:
+    enabled: false
+  sonarvb:
+    enabled: false
+  spectral:
+    enabled: false
+  SQLint:
+    enabled: false
+  stylelint:
+    enabled: false
+  swiftlint:
+    enabled: false
+  trivy:
+    enabled: true
+  tsqllint:
     enabled: false
 
 files:
