--- a/.codacy.yml
+++ b/.codacy.yml
@@ -1,110 +1,40 @@
+---
 engines:
-  ameba:
-    enabled: false
   bandit:
     enabled: true
-  brakeman:
-    enabled: false
-  checkov:
-    enabled: false
-  checkstyle:
-    enabled: false
-  codacy-scalameta-pro:
-    enabled: false
-  codenarc:
-    enabled: false
-  coffeelint:
-    enabled: false
-  cppcheck:
-    enabled: false
-  credo:
-    enabled: false
-  dartanalyzer:
-    enabled: false
-  detekt:
-    enabled: false
   duplication:
     enabled: false
-    exclude_paths:
-      - "**"
-  eslint-8:
-    enabled: false
-  flawfinder:
-    enabled: false
-  hadolint:
-    enabled: false
-  jacksonlinter:
-    enabled: false
+  flake8:
+    enabled: true
   markdownlint:
     enabled: true
-  phpcs:
-    enabled: false
-  phpmd:
-    enabled: false
-  pmd:
-    enabled: false
-  pmdcpd:
-    enabled: false
-  prospector:
+  mypy:
     enabled: true
-  psscriptanalyzer:
+  pmdcpd:
     enabled: false
   pylintpython3:
     enabled: true
-  remark-lint:
-    enabled: false
-  revive:
-    enabled: false
-  rubocop:
-    enabled: false
-  scalastyle:
-    enabled: false
-  semgrep:
-    enabled: true
-  shellcheck:
-    enabled: true
-  sonarcsharp:
-    enabled: false
-  sonarvb:
-    enabled: false
-  spectral:
-    enabled: false
-  SQLint:
-    enabled: false
-  stylelint:
-    enabled: false
-  swiftlint:
-    enabled: false
   trivy:
     enabled: true
-  tsqllint:
-    enabled: false
 
-files:
-  include:
-    - "src/**"
-    - "scripts/**"
-    - "configs/**"
-  exclude:
-    - "tests/**"
-    - "docs/**"
-    - ".venv/**"
-    - "data/**"
-    - "models/**"
-    - "notebooks/**"
-    - ".ipynb_checkpoints/**"
-    - "**/__pycache__/**"
-    - "*.egg-info/**"
-    - "*.egg/**"
+exclude_paths:
+  - "tests/**"
+  - "docs/**"
+  - ".venv/**"
+  - "data/**"
+  - "models/**"
+  - "notebooks/**"
+  - ".ipynb_checkpoints/**"
+  - "**/__pycache__/**"
+  - "*.egg-info/**"
+  - "*.egg/**"
+  - "**/migrations/**"
+  - "**/settings.py"
 
 tools:
   flake8:
     config: .flake8
-  pylint:
+  pylintpython3:
     config: .pylintrc
   mypy:
     config: mypy.ini
-
-ignore:
-  - "**/migrations/**"
-  - "**/settings.py"
