--- a/.github/workflows/codacy.yml
+++ b/.github/workflows/codacy.yml
@@ -33,6 +33,7 @@ jobs:
           format: sarif
           gh-code-scanning-compat: true
           max-allowed-issues: 2147483647
+          run-docker-tools: false
 
       - name: Upload SARIF results file
         uses: github/codeql-action/upload-sarif@v3
