--- a/.github/workflows/codacy.yml
+++ b/.github/workflows/codacy.yml
@@ -28,12 +28,12 @@ jobs:
         uses: codacy/codacy-analysis-cli-action@d840f886c4bd4edc059706d09c6a1586111c540b
         with:
           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+          tool: flake8
           verbose: true
           output: results.sarif
           format: sarif
           gh-code-scanning-compat: true
           max-allowed-issues: 2147483647
-          run-docker-tools: false
 
       - name: Upload SARIF results file
         uses: github/codeql-action/upload-sarif@v3
